# graphics-seminar

./: .gitignore  CMakeLists.txt  README.md  main.cpp  util.h
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
